<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_profile"
        android:title="@string/menu_profile"
        android:icon="@drawable/profile_icon" />

    <item
        android:id="@+id/menu_new_post"
        android:title="@string/menu_add_new_post"
        android:icon="@drawable/post_icon"/>

    <item
        android:id="@+id/menu_message"
        android:title="@string/menu_message"
        android:icon="@drawable/chat_icon" />
    <item
        android:id="@+id/menu_notification"
        android:title="@string/notification"
        android:icon="@drawable/notification_icon" />

    <item
        android:id="@+id/menu_friends"
        android:title="@string/menu_friends"
        android:icon="@drawable/find_friends"/>

    <item
        android:id="@+id/menu_find_friends"
        android:title="@string/menu_find_friends"
        android:icon="@drawable/find_friend" />


    <item
        android:id="@+id/menu_university"
        android:title="@string/menu_university"
        android:icon="@drawable/university_icon"/>

    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:icon="@drawable/settings_icon"/>

    <item
        android:id="@+id/menu_sign_out"
        android:title="@string/menu_sign_out"
        android:icon="@drawable/sign_out_icon" />
</menu>